--- a/.github/workflows/gh-pages.yml/github-pages.yml
+++ b/.github/workflows/gh-pages.yml/github-pages.yml
@@ -1,7 +1,10 @@
 name: GitHub Pages
-
-on: push
-
+on:
+  push:
+    branches:
+      - 'main'  # Set a branch to deploy
+  pull_request:
+  workflow_dispatch:
 jobs:
   deploy:
     runs-on: ubuntu-20.04
