--- a/.github/workflows/gh-pages.yml/github-pages.yml
+++ b/.github/workflows/gh-pages.yml/github-pages.yml
@@ -1,10 +1,10 @@
 name: GitHub Pages
-on:
-  push:
-    branches:
-      - 'main'  # Set a branch to deploy
-  pull_request:
-  workflow_dispatch:
+on: workflow_dispatch
+  # push:
+  #   branches:
+  #     - 'main'  # Set a branch to deploy
+  # pull_request:
+  
 jobs:
   deploy:
     runs-on: ubuntu-20.04
