--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -1,9 +1,10 @@
 name: GitHub Pages
-on: workflow_dispatch
-  # push:
-  #   branches:
-  #     - 'main'  # Set a branch to deploy
-  # pull_request:
+on:
+  push:
+    branches:
+      - 'main'  # Set a branch to deploy
+  pull_request:
+  workflow_dispatch:
   
 jobs:
   deploy:
