--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,6 +1,7 @@
 backend:
   name: github
   repo: 'envision-projects/envision-projects.github.io'
+  base_url: 'https://api.netlify.com'
   branch: main # Branch to update (optional; defaults to master)
 media_folder: static/images
 public_folder: /images
