first save of babyslipring

--- a/content/electrical/Baby slip ring/Documentation/.obsidian/workspace
+++ b/content/electrical/Baby slip ring/Documentation/.obsidian/workspace
@@ -128,9 +128,10 @@
     "direction": "horizontal",
     "width": 300
   },
-  "active": "26fceb9737fc599f",
+  "active": "29c0b9d8669e37a8",
   "lastOpenFiles": [
-    "images/Pasted image 20220730140143.png",
-    "Instructions.md"
+    "Pasted image 20220705191504.png.md",
+    "Instructions.md",
+    "images/Pasted image 20220730140143.png"
   ]
 }
