--- a/content/electrical/Baby slip ring/Documentation/.obsidian/workspace
+++ b/content/electrical/Baby slip ring/Documentation/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Instructions.md",
+            "file": "_index.md.md",
             "mode": "source",
             "source": false
           }
@@ -77,7 +77,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Instructions.md",
+                "file": "_index.md.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -94,7 +94,7 @@
             "state": {
               "type": "outgoing-link",
               "state": {
-                "file": "Instructions.md",
+                "file": "_index.md.md",
                 "linksCollapsed": false,
                 "unlinkedCollapsed": true
               }
@@ -117,7 +117,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "Instructions.md"
+                "file": "_index.md.md"
               }
             }
           }
@@ -131,7 +131,7 @@
   "active": "29c0b9d8669e37a8",
   "lastOpenFiles": [
     "Pasted image 20220705191504.png.md",
-    "Instructions.md",
+    "_index.md.md",
     "images/Pasted image 20220730140143.png"
   ]
 }
